[metadata]
name = ruleslabs-core
version = attr: ruleslabs-core.__version__
description = Periphery smart contracts used by rules.
author = 0xChqrles
author_email = charles@rules.art
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ruleslabs/core
platforms = any
classifiers =
  Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
  =src

install_requires =
  importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
  tests

[options.package_data]
core = "*.cairo"

[options.extras_require]
testing =
  setuptools
  tox
  pytest
